CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- The web interface did not show the printer state
	  history information (STR #592)
	- The rastertoepson filter would crash under certain
	  cirsumstances (STR #583)
	- The USB backend did not handle serial numbers using
	  the (incorrect) SN keyword and did not terminate the
	  make and model name strings properly (STR #588)
	- The USB backend did not build on Solaris x86 (STR
	  #585)
	- The cupsDoAuthentication() function did not use the
	  method name for Digest authentication (STR #584)
	- The scheduler could crash if a print job could not be
	  printed and the PreserveJobHistory option was turned
	  off (STR #535)
	- cups-lpd now logs the temporary filenames that could
	  not be opened in order to make troubleshooting easier
	  (STR #565)
	- cupsGetJobs() now returns -1 on error (STR #569)
	- Added localization for Belarusian (STR #575)
	- The LPD backend used the full length of the hostname
	  when creating the data and control filenames, which
	  causes problems with older systems that can't handle
	  long filenames (STR #560)
	- The scheduler did not refresh the common printer data
	  after a fast reload; this prevented banner and other
	  information from being updated (STR #562)
	- The scheduler did not send common or history data to
	  the client when processing a CUPS-Get-Default request
	  (STR #559)
	- The httpFlush() function did not always flush the
	  remaining response data in requests (STR #558)
	- The scheduler could complete a job before it collected
	  the exit status from all filters and the backend (STR
	  #448)
	- The PPD conformance tests did not catch group
	  translation strings that exceeded the maximum allowed
	  size (STR #454)
	- Updated the client code in the scheduler to close the
	  client connection on errors rather than shutting down
	  the receive end of the socket; this caused resource
	  problems on some systems (STR #434)